Add "Try Redakt!" Button

--- a/popup.html
+++ b/popup.html
@@ -6,11 +6,12 @@
 	</head>
 	<body>
 		<div class="popup-container">
-			<h3><a href="https://redakt.org/" target="_blank" title="visit redakt.org">Redakt</a> <span id="version">v1.2.2</span></h3>
+			<h3><a href="https://redakt.org/" target="_blank" title="visit redakt.org">Redakt</a></h3>
+			
 			<img id="syncIcon" src="./assets/sync.png" title="Force decryption"/>
 		    <div class="textarea-wrapper">
     			<textarea id="inputText" placeholder="Enter text to encrypt or decrypt"></textarea>
-    			<button id="pasteButton" title="Paste text">Paste</button>
+    			<!-- <button id="pasteButton" title="Paste text">Paste</button> -->
 			</div>
 		    <div>
 		      <button id="buttonDecrypt" title="Decrypt text">Decrypt</button>
@@ -18,6 +19,10 @@
 		    </div>
 		    <p id="outputText" title="Click to copy!"></p>
 		    <div><p class="copied" id="copied"><i>Text copied</i></p></div>
+		    <footer>
+			   	<a href="https://redakt.org/try/" target="_blank" title="Try Redakt!"><span id="try">Try Redakt!</span></a>
+			    <a href="https://redakt.org/github/" target="_blank" title="Redakt on GitHub"><span id="version">v1.2.3</span></a>
+			</footer>
 		  </div>
 		</div>
 	</body>
