--- a/popup.html
+++ b/popup.html
@@ -6,12 +6,12 @@
 	</head>
 	<body>
 		<div class="popup-container">
-			<h3><a href="https://redakt.org/" target="_blank" title="visit redakt.org">Redakt</a></h3>
-			
-			<img id="syncIcon" src="./assets/sync.png" title="Force decryption"/>
+			<header>
+				<h3><a href="https://redakt.org/" target="_blank" title="https://redakt.org/">Redakt</a></h3>
+				<img id="syncIcon" src="./assets/sync.png" title="Force decryption"/>
+			</header>
 		    <div class="textarea-wrapper">
     			<textarea id="inputText" placeholder="Enter text to encrypt or decrypt"></textarea>
-    			<!-- <button id="pasteButton" title="Paste text">Paste</button> -->
 			</div>
 		    <div>
 		      <button id="buttonDecrypt" title="Decrypt text">Decrypt</button>
@@ -20,8 +20,8 @@
 		    <p id="outputText" title="Click to copy!"></p>
 		    <div><p class="copied" id="copied"><i>Text copied</i></p></div>
 		    <footer>
-			   	<a href="https://redakt.org/try/" target="_blank" title="Try Redakt!"><span id="try">Try Redakt!</span></a>
-			    <a href="https://redakt.org/github/" target="_blank" title="Redakt on GitHub"><span id="version">v1.2.3</span></a>
+			   	<a href="https://redakt.org/try/" target="_blank" title="https://redakt.org/try/"><span id="try">Try Redakt!</span></a>
+			    <a href="https://redakt.org/github/" target="_blank" title="https://redakt.org/github/"><span id="version">v1.2.4</span></a>
 			</footer>
 		  </div>
 		</div>
