Edit position of Try button and force decrypt

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 		<div class="popup-container">
 			<header>
 				<h3><a href="https://redakt.org/" target="_blank" title="https://redakt.org/">Redakt</a></h3>
-				<img id="syncIcon" src="./assets/sync.png" title="Force decryption"/>
+				<img id="syncIcon" src="./assets/sync.png" title="Force page decryption"/>
 			</header>
 		    <div class="textarea-wrapper">
     			<textarea id="inputText" placeholder="Enter text to encrypt or decrypt"></textarea>
