Renaming Redakt to Keylang (1.2.6)
- Changing name and logo (from Redakt to Keylang)
- Changing all links to https://keylang.org
- Changing prefix to <keylang></keylang>
- Changing prefix to [keylang][/keylang]

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 	<body>
 		<div class="popup-container">
 			<header>
-				<h3><a href="https://redakt.org/" target="_blank" title="https://redakt.org/">Redakt</a></h3>
+				<h3><a href="https://keylang.org/" target="_blank" title="https://keylang.org/">Keylang</a></h3>
 				<img id="syncIcon" src="./assets/sync.png" title="Force page decryption"/>
 			</header>
 		    <div class="textarea-wrapper">
@@ -20,8 +20,8 @@
 		    <p id="outputText" title="Click to copy!"></p>
 		    <div><p class="copied" id="copied"><i>Text copied</i></p></div>
 		    <footer>
-			   	<a href="https://redakt.org/try/" target="_blank" title="https://redakt.org/try/"><span id="try">Try Redakt!</span></a>
-			    <a href="https://redakt.org/github/" target="_blank" title="https://redakt.org/github/"><span id="version">v1.2.4</span></a>
+			   	<a href="https://keylang.org/demo/" target="_blank" title="https://keylang.org/demo/"><span id="try">Demo</span></a>
+			    <a href="https://keylang.org/github/" target="_blank" title="https://keylang.org/github/"><span id="version">v1.2.6</span></a>
 			</footer>
 		  </div>
 		</div>
